<resources>
    <string name="app_name">P8车服</string>
    <string name="company">P8车服</string>

    <string name="only_allow_input">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!--登录 注册 忘记密码-->
    <string name="account">账 号：</string>
    <string name="password">密 码：</string>
    <string name="immediatelyLogin">登录</string>
    <string name="finish">完成</string>
    <string name="fastRegister">快速注册</string>
    <string name="forgetPwd">忘记密码?</string>
    <string name="phoneNum">手机号：</string>
    <string name="affirmPwd">确认密码：</string>
    <string name="verificationCode">验证码：</string>
    <string name="getVerificationCode">获取验证码</string>
    <string name="invitationCode">邀请码：</string>
    <string name="tipRegister">没有此项可以不填</string>
    <string name="resetPwd">重置密码</string>
    <string name="press_again_exit">再次点击退出应用</string>

    <string name="tips_scan_code">将二维码/条形码放入框内，即可自动扫描</string>

    <string name="main_table_home">首页</string>
    <string name="main_table_attendance">考勤</string>
    <string name="main_table_me">我的</string>

    <string name="title_device_binding">设备绑定</string>
    <string name="title_device_debug">设备调试</string>
    <string name="title_attendance">考勤打卡</string>
    <string name="title_search">搜索</string>
    <string name="title_user_center">个人中心</string>
    <string name="title_modify_password">修改密码</string>
    <string name="title_message_center">消息中心</string>
    <string name="title_settings">设置</string>
    <string name="title_attendance_history">考勤记录</string>
    <string name="title_parking_monitor">停车监控</string>
    <string name="title_work_order_dispose">工单处理</string>
    <string name="title_malfunction_order">故障工单</string>
    <string name="title_submit_order">工单填写</string>
    <string name="title_landlord_manage">地主管理</string>
    <string name="title_landlord_add">添加地主</string>
    <string name="title_landlord_modify">修改地主</string>
    <string name="title_notice_manage">公告管理</string>
    <string name="title_order_manage">订单管理</string>
    <string name="title_order_info">订单详情</string>
    <string name="title_scan_qr_code">扫码</string>
    <string name="title_parking_detail">车位详情</string>

    <string-array name="userType">
        <item>大主</item>
        <item>地主</item>
        <item>场主</item>
        <item>小主</item>
        <item>台主</item>
        <item>中主</item>
        <item>自主</item>
        <item>施主</item>
        <item>其他</item>
    </string-array>

</resources>